--- a/frontend/style.css
+++ b/frontend/style.css
@@ -365,21 +365,27 @@ main .info-data {
 }
 main .info-data .card {
 	padding: 20px;
+	height: fit-content;
 	border-radius: 10px;
 	background: var(--light);
 	box-shadow: 4px 4px 16px rgba(0, 0, 0, .05);
 }
 main .card .head {
-	display: flex;
 	justify-content: space-between;
-	align-items: flex-start;
+	align-items: center;
 }
 main .card .head h2 {
-	font-size: 24px;
+	font-size: 20px;
 	font-weight: 600;
+	text-align: center;
+	padding: 10px;
 }
 main .card .head p {
 	font-size: 14px;
+	color: var(--dark-grey);
+	font-weight: 400;
+	text-align: center;
+
 }
 main .card .head .icon {
 	font-size: 20px;
