--- a/frontend/front.css
+++ b/frontend/front.css
@@ -14,7 +14,7 @@ body {
   background-image: url("https://images.pexels.com/photos/1275415/pexels-photo-1275415.jpeg");
   background-size: cover;
   background-repeat: no-repeat;
-  backgrond-position: center;
+  overflow: hidden;
 }
 .login-container {
   padding: 40px 20px;
